--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
    <div class="container">
       <div class="wrapper" data-barba="container" data-barba-namespace="services">
          <nav class="navbar">
-            <a href="base.html" class="navbar__brand">Tierd</a>
+            <a href="#" class="navbar__brand">Tierd</a>
             <ul class="navbar__nav">
                <li class="navbar__items"><a href="#" class="navbar__links">Get Rejuvinated</a></li>
                <li class="navbar__items"><a href="#" class="navbar__links">About</a></li>
